# simple_compiler

./: CMakeLists.txt  README.md
include/: AST.h  Lexer.h  Parser.h  SemanticAnalyzer.h  Token.h  TokenType.h  TypeInfo.h
src/: AST.cpp  Lexer.cpp  Parser.cpp  SemanticAnalyzer.cpp  Token.cpp  TokenType.cpp  main.cpp
tests/: test1.txt  test2.txt  test3.txt
